--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           
           <!-- Top Right: Placeholder for Image -->
           <div class="bg-blue-700 rounded-lg flex items-center justify-center min-h-[120px] overflow-hidden relative">
-            <img src="/images/jacket.JPG" class="w-full h-[150px] sm:h-[190px] md:h-[230px] object-cover object-top" />
+            <img src="/images/jacket.JPG" alt="Lisa Bennett, candidate for New Jersey Assembly District 9" class="w-full h-[150px] sm:h-[190px] md:h-[230px] object-cover object-top" />
           </div>
           
           <!-- Bottom Left: Stacked CTA Buttons -->
