--- a/endorsements/index.html
+++ b/endorsements/index.html
@@ -109,7 +109,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/HPAE.png" />
+                <img src="/images/endorsement-logos/HPAE.png" alt="Health Professionals and Allied Employees (HPAE) endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Health Professionals and Allied Employees (HPAE)
@@ -124,7 +124,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/AFTNJ-logo.png" />
+                <img src="/images/endorsement-logos/AFTNJ-logo.png" alt="American Federation of Teachers New Jersey (AFTNJ) endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 American Federation of Teachers (AFTNJ)
@@ -139,7 +139,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
-                <img class="bg-gray-600" src="/images/endorsement-logos/AFLCIO.png" />
+                <img class="bg-gray-600" src="/images/endorsement-logos/AFLCIO.png" alt="New Jersey State AFL-CIO endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 New Jersey State AFL-CIO
@@ -154,7 +154,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/MomsDemandAction.png" />
+                <img src="/images/endorsement-logos/MomsDemandAction.png" alt="Moms Demand Action endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Moms Demand Action
@@ -169,7 +169,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/Pamslist.png" />
+                <img src="/images/endorsement-logos/Pamslist.png" alt="PAM's List endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 PAM's List
@@ -184,7 +184,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                 <img src="/images/endorsement-logos/pp-endorsed.png" />
+                 <img src="/images/endorsement-logos/pp-endorsed.png" alt="Planned Parenthood Action Fund of NJ endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Planned Parenthood Action Fund of NJ
@@ -199,7 +199,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/manchester-dems.png" />
+                <img src="/images/endorsement-logos/manchester-dems.png" alt="Manchester Township Democratic Club endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Manchester Township Democratic Club
@@ -214,7 +214,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white rounded-lg mb-4 flex items-center justify-center">
-                <img src="/images/endorsement-logos/Stafford_Dem_Logo.png" />
+                <img src="/images/endorsement-logos/Stafford_Dem_Logo.png" alt="Democratic Club of Stafford Township endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Democratic Club of Stafford Township
@@ -229,7 +229,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
-                 <img src="/images/endorsement-logos/Blue_Logo_Final.png" />
+                 <img src="/images/endorsement-logos/Blue_Logo_Final.png" alt="Ocean County Democratic Committee endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Ocean County Democratic Committee
@@ -244,7 +244,7 @@
               class="bg-blue-900 group backdrop-blur-md rounded-xl shadow-lg border border-white/20 p-6 transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:border-white/40 cursor-pointer">
               <!-- Placeholder for logo/image -->
               <div class="w-full bg-white p-2 rounded-lg mb-4 flex items-center justify-center">
-                 <img src="/images/endorsement-logos/WPCNJ-logo.png" />
+                 <img src="/images/endorsement-logos/WPCNJ-logo.png" alt="Women's Political Caucus of New Jersey endorsement logo" />
               </div>
               <h3 class="text-xl font-bold text-white mb-2 group-hover:text-blue-300 transition-colors underline">
                 Women's Political Caucus of New Jersey
